[project]
name = "quantol"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.2",
    "aiosqlite>=0.22.1",
    "akshare>=1.18.2",
    "astunparse>=1.6.3",
    "asyncpg>=0.31.0",
    "baostock>=0.8.9",
    "chinesecalendar>=1.11.0",
    "ipywidgets>=8.1.8",
    "mouseinfo==0.1.3",
    "numpy>=2.4.0",
    "opencv-python==4.11.0.86",
    "pillow==11.2.1",
    "plotly>=6.5.0",
    "pyarrow>=22.0.0",
    "pymsgbox==1.0.9",
    "pyperclip==1.9.0",
    "pyrect==0.2.0",
    "python-dotenv>=1.2.1",
    "pyjwt>=2.8.0",
    "bcrypt>=4.2.0",
    "pytweening==1.2.0",
    "streamlit>=1.52.2",
    "urllib3==1.26.15",
    "streamlit-antd-components>=0.3.2",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.20",
    "email-validator>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]
